--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
         test_flags: ["", "--no-default-features", "--all-features"]
     timeout-minutes: 5
     steps:
+      - run: 'sudo apt-get install libgstreamer1.0-dev'
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
