--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,15 +22,17 @@ tracing = "0.1.0"
 tracing-core = "0.1.17"
 gstreamer = "0.24"
 thread_local = "1.1"
-tracing-chrome = "0.7.0"
-tracing-subscriber = "0.3"
+tracing-chrome = { version = "0.7.0", optional = true }
+tracing-subscriber = { version = "0.3", optional = true }
 
 [dev-dependencies]
 tracing = "0.1.0"
 tracing-tracy = "0.11"
+tracing-subscriber = "0.3"
 
 [package.metadata.docs.rs]
 rustdoc-args = ["--cfg", "tracing_gstreamer_docs"]
 
 [features]
-tracing-chrome = []
+tracing-chrome = ["dep:tracing-chrome"]
+tracing-subscriber = ["dep:tracing-subscriber"]
